[flake8]
max-complexity = 10
max-cognitive-complexity = 10
max-line-length = 160
ignore = E303,W503

[isort]
filter_files = True
ignore_whitespace = True
line_length = 160
multi_line_output = 1
order_by_type = True

[metadata]
license = MIT
license_file = LICENSE.md
long_description = file: README.md

[mypy]
ignore_missing_imports = True

[yapf]
blank_line_before_nested_class_or_def = True
column_limit = 160
split_all_top_level_comma_separated_values = True
split_before_arithmetic_operator = True
